完成挑战练习现实版本号
Signed-off-by: guofeng <imeepwni@outlook.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="cheat_button">Cheat!</string>
     <string name="show_answer_button">Show Answer</string>
     <string name="judgment_toast">Cheating is wrong.</string>
+    <string name="api_level">API LEVEL 25</string>
 </resources>
